Avoid type redefinitions

The G_DECLARE_* macros already define the types. Support for type
redefinition requires C11, but we don't want GtkSourceView to require
C11 yet.

https://bugzilla.gnome.org/show_bug.cgi?id=782708